feat: penambahan konfigurasi CORS, middleware auth & perbaikan dokumentasi API
Perubahan yang dilakukan:
- Menambah konfigurasi CORS untuk mengizinkan akses dari frontend lokal dan produksi.
- Menambah middleware 'VerifyAuthToken' untuk integrasi dengan service auth. (Middleware belum diimplementasikan pada route karena menunggu API verifikasi token dari service auth).
- Memperbaiki dan melengkapi dokumentasi API pada Swagger.
